data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2182.wast
;; 2. **Test 2: Default Label with Incorrect Operand Type**    - **Description**: Design a loop with a `br_table` instruction where the operand stack type for the default label does not match the expected type. Include conditions for the loop to always restart.    - **Constraint**: The test verifies the correct type-checking of default labels.    - **Infinite Loop Relation**: Failure in operand type validation can result in an incorrect looping behavior, trapping the execution in the loop.

(assert_invalid
  (module (func
    (block $default (result i32)
      (loop $loop
        (br_table 0 $default $loop (i32.const 1))
      )
    )
  ))
  "type mismatch"
)